Change assign page layout a little

--- a/SparkleTesting/Views/Assign/Index.cshtml
+++ b/SparkleTesting/Views/Assign/Index.cshtml
@@ -16,7 +16,8 @@
         @foreach(var test in @Model)
         {
         <tr>
-            <td>@test.Name 
+            <td colspan="3">
+                @test.Name 
                 <form method="post" action="/Assign/AddUser">
                     <input id="assigne" name="assigne" value="" />
                     <input id="testId" name="testId" value="@test.Id" style="display:none" />
@@ -27,7 +28,9 @@
         @foreach(var attempt in @test.Attempts)
         {
             <tr>
-                <td>@attempt.Assigned @if (@attempt.UserId != null) { <text>(@attempt.User.Surname @attempt.User.Name)</text> }</td>
+                <td>@attempt.Assigned</td>
+                <td>@if (@attempt.UserId != null) { <text>(@attempt.User.Surname @attempt.User.Name)</text> }</td>
+                <td>@if (@attempt.ElapsedTime.HasValue) { <text>Тест пройден</text>}</td>
             </tr>
         }
         }
